<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MathPath</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!!!</string>
    <string name="calculus1">Calculus 1</string>
    <string name="calculus2">Calculus 2</string>
    <string name="info">i</string>
    <string name="welcome_message_line1">Welcome to MathPath!!</string>
    <string name="welcome_message_line2">Please select a class below:</string>
    <string name="limits">LIMITS</string>
    <string name="derivatives">DERIVATIVES</string>
    <string name="integrals">INTEGRALS</string>
    <string name="quiz_page_title">Quiz</string>
    <string name="next_video">Next Video</string>
    <string name="previous_video">Previous Video</string>
    <string name="er">External Resources</string>
    <string name="resource_1">http://ocw.mit.edu/resources/res-18-001-calculus-online-textbook-spring-2005/textbook/</string>
    <string name="resource_2">http://www.math.wisc.edu/~keisler/calc.html</string>
    <string name="resource_3">http://tutorial.math.lamar.edu/pdf/CalcI/CalcI_Complete.pdf</string>
    <string name="resource_4">http://tutorial.math.lamar.edu/Classes/CalcI/CalcI.aspx</string>
    <string name="resource_5">http://www.karlscalculus.org/</string>
    

    <string-array name="limits_array">
        <item>Intro to Limits</item>
        <item>Solving Limits</item>
        <item>Limits at Infinity</item>
        <item>Continuity</item>
    </string-array>
    <string-array name="derivatives_array">
        <item>Intro to Derivatives</item>
        <item>Limit Definitions</item>
        <item>Rules</item>
        <item>Implicit Differentiation</item>
        <item>Optimization</item>
        <item>Related Rates</item>
    </string-array>
    <string-array name="integrals_array">
        <item>Intro to Integrals</item>
        <item>Indefinite Integrals</item>
        <item>Definite Integrals</item>
        <item>Area Under the Curve</item>
        <item>U Substitution</item>
    </string-array>

    <color name="purple">#330022</color>
    <color name="gray">#BBBBBB</color>
    <color name="black">#000000</color>
    <color name="white">#FFFFFF</color>
    <color name="button_border">#5AB9ED</color>
    <color name="MathPathBlue">#008fd5</color>
	<color name="blue">#008fd5</color>
    
    <string name="goButton">Watch Videos</string>
    <string name="takeQuiz">Take Quiz</string>
    <string name="submit">Submit</string>
    <string name="title_activity_videos">Videos</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="title_activity_tabs">Tabs</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="topics_description">Please select a topic to start your MathPath</string>
    <string name="enter_fullscreen">Enter Fullscreen</string>
    <string name="video_description">This is a demo which shows how to handle fullscreen behaviour. This activity has differents layouts for portrait, landscape and fullscreen. The user can enter fullscreen either by using the player controller or programmatically by the programmer (here using a button). If your activity does not have a landscape layout, you can choose to automatically enter fullscreen when the device is rotated to landscape orientation.</string>
    <string name="title_activity_vid_desc">VidDesc</string>
    <string name="title_activity_limits_intro_videos_tab_vid_descs">LimitsIntroVideosTabVidDescs</string>
    <string name="title_activity_limits_solving_videos_tab_vid_descs">LimitsSolvingVideosTabVidDescs</string>
    <string name="Videos">Videos</string>
    <string name="Courses">Courses</string>
    <string name="Quizzes">Quizzes</string>
    
</resources>
