<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/welcome_line1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/welcome_message_line1"
        android:textColor="@color/white"
        android:textSize="30sp" />
    
    <TextView
        android:id="@+id/welcome_line2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/welcome_message_line2"
        android:textColor="@color/white"
        android:textColorLink="@color/white"
        android:textSize="30sp" />

    <ScrollView 
        android:id="@+id/subjects"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <LinearLayout android:id="@+id/subject_layout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            
	        <LinearLayout
		        android:id="@+id/buttons1"
		        android:orientation="horizontal"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="40dp"
		        android:layout_gravity="center_horizontal" >
		        
		        <Button
		            android:id="@+id/calc1_button"
		            style="?android:attr/buttonStyleSmall"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:background="@drawable/rounded_corner_button"
		            android:paddingBottom="50dp"
		            android:paddingLeft="120dp"
		            android:paddingRight="120dp"
		            android:paddingTop="50dp"
		            android:text="@string/calculus1"
		            android:textColor="@color/white"
		            android:textSize="20sp" />
		    
		    	<Button 
			        android:id="@+id/calc1_info_button"
			        android:text="@string/info"
			        style="?android:attr/buttonStyleSmall"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_marginTop="30dp"
			        android:textColor="@color/white"
			        android:background="@drawable/round_button" />
		        
		    </LinearLayout>
		    
		    <LinearLayout
		        android:id="@+id/buttons2"
		        android:orientation="horizontal"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="40dp"
		        android:layout_gravity="center_horizontal" >
		        
		        <Button
			        android:id="@+id/calc2_button"
			        android:text="@string/calculus2"
			        style="?android:attr/buttonStyleSmall"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:paddingLeft="120dp"
			        android:paddingRight="120dp"
			        android:paddingTop="50dp"
			        android:paddingBottom="50dp"
			        android:textSize="20sp"
			        android:textColor="@color/white"
			        android:background="@drawable/rounded_corner_button" />
		    
		    	<Button 
			        android:id="@+id/calc2_info_button"
			        android:text="@string/info"
			        style="?android:attr/buttonStyleSmall"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_marginTop="30dp"
			        android:textColor="@color/white"
			     	android:background="@drawable/round_button" />
		        
		    </LinearLayout>
            
        </LinearLayout>
        
    </ScrollView>
   
</LinearLayout>
