<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

<ScrollView 
    android:layout_width="match_parent"
    android:layout_height="0dp"
	android:layout_weight="1">
        
    <LinearLayout android:orientation="vertical"
    	android:layout_width="500dp"
     	android:layout_height="match_parent"
     	android:layout_gravity="center_horizontal" >
     	
        <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:textColor="@color/white"
        android:textColorLink="@color/white"
        android:textSize="25sp"
        android:text="INTRO TO DERIVATIVES"
        android:layout_gravity="center_horizontal" /> 
        
        <Button android:id="@+id/limits_all_first_vid_button"
	        android:text="Introduction to Limits"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:layout_marginLeft="90dp"
		    android:layout_marginRight="90dp"
	        android:layout_gravity="center_horizontal"
	        android:background="@drawable/button" />
	    
    	<Button android:id="@+id/limits_all_second_vid_button"
	        android:text="1.1 Introduction to Limits"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:layout_marginLeft="90dp"
		    android:layout_marginRight="90dp"
	        android:layout_gravity="center_horizontal"
	        android:background="@drawable/button" />
    	
    	<TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:textColor="@color/white"
        android:textColorLink="@color/white"
        android:textSize="25sp"
        android:text="SOLVING LIMITS"
        android:layout_gravity="center_horizontal" /> 
	        
       	<Button android:id="@+id/limits_all_third_vid_button"
	        android:text="Limit Examples (part 1)"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:layout_marginLeft="90dp"
		    android:layout_marginRight="90dp"
	        android:background="@drawable/button" />
    
    	<Button android:id="@+id/limits_all_fourth_vid_button"
	        android:text="Limit Examples (part 2)"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:layout_marginLeft="90dp"
		    android:layout_marginRight="90dp"
	        android:background="@drawable/button" />
    	
    	<Button android:id="@+id/limits_all_fifth_vid_button"
	        android:text="Limit Examples (part 3)"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:layout_marginLeft="90dp"
		    android:layout_marginRight="90dp"
	        android:background="@drawable/button" />
    	
    	<Button android:id="@+id/limits_all_sixth_vid_button"
	        android:text="Squeeze Theorem"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:layout_marginLeft="90dp"
		    android:layout_marginRight="90dp"
	        android:background="@drawable/button" />
    	
    	<TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:textColor="@color/white"
        android:textColorLink="@color/white"
        android:textSize="25sp"
        android:text="LIMITS AT INFINITY"
        android:layout_gravity="center_horizontal" /> 
    	
    	<Button android:id="@+id/limits_all_seventh_vid_button"
	        android:text="Limits at Infinity"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:layout_marginLeft="90dp"
		    android:layout_marginRight="90dp"
	        android:layout_gravity="center_horizontal"
	        android:background="@drawable/button" />
	    
    	<Button android:id="@+id/limits_all_eighth_vid_button"
	        android:text="More Limits at Infinity"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:layout_marginLeft="90dp"
		    android:layout_marginRight="90dp"
	        android:layout_gravity="center_horizontal"
	        android:background="@drawable/button" />
    	
    	<TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:textColor="@color/white"
        android:textColorLink="@color/white"
        android:textSize="25sp"
        android:text="CONTINUITY"
        android:layout_gravity="center_horizontal" /> 
    	
    	<Button android:id="@+id/limits_all_ninth_vid_button"
	        android:text="Limits to Define Continuity"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:layout_marginLeft="90dp"
		    android:layout_marginRight="90dp"
	        android:layout_gravity="center_horizontal"
	        android:background="@drawable/button" />
	    
    	<Button android:id="@+id/limits_all_tenth_vid_button"
	        android:text="One-sided Limits from Graphs"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:layout_marginLeft="90dp"
		    android:layout_marginRight="90dp"
	        android:layout_gravity="center_horizontal"
	        android:background="@drawable/button" />
	        
    </LinearLayout>
        
</ScrollView>
    <LinearLayout
        		android:id="@+id/menu"
		        android:orientation="horizontal"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:background="@color/white">
        
        <Button
			        android:id="@+id/courses_button"
			        android:text="@string/Courses"
			        android:layout_width="wrap_content"
			        android:layout_height="50dp"
			        android:textSize="20dp"
			        android:textColor="#ffffff"
			        android:background="@color/blue"
			        android:layout_weight="1"
			        android:shadowColor="#000000"
			        android:shadowDx="0"
			        android:shadowDy="2"
			        android:shadowRadius="2" />
		<Button
			        android:id="@+id/videos_button"
			        android:text="@string/Videos"
			        android:layout_width="wrap_content"
			        android:layout_height="50dp"
			        android:textSize="20dp"
			        android:textColor="#0e2945"
			        android:background="@color/blue"
			        android:layout_weight="1"
			        android:shadowColor="#b4d6e7"
			        android:shadowDx="0"
			        android:shadowDy="2"
			        android:shadowRadius="2" />
		<Button
			        android:id="@+id/quizzes_button"
			        android:text="@string/Quizzes"
			        android:layout_width="wrap_content"
			        android:layout_height="50dp"
			        android:textSize="20dp"
			        android:textColor="@color/white"
			        android:background="@color/blue"
			        android:layout_weight="1"
			        android:shadowColor="#000000"
			        android:shadowDx="0"
			        android:shadowDy="2"
			        android:shadowRadius="2" />
        
    </LinearLayout>
</LinearLayout>